Allowed KKArmor stats to be visible in the shop Optimized the stat displaying code